<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SurtidoIntentImpl</string>
    <string name="action_settings">Settings</string>
    <string name="conociendo">Conociendo la EPS</string>
    <string name="ubicando">Localizacion</string>
    <string name="navegando">Acceso a la web</string>
    <string name="contactando">Tlf. de contacto: 973.702.700</string>
    <string name="link">\thttp://www.udl.cat</string>
    <string name="emailDest">Email destinatario: sss@udl.cat\t</string>
    <string name="smsDest">Tlf. destino: 666666666\t</string>
    <string name="smsDest2">6466888777</string>
    <string name="telef">666666666</string>
    <string name="mail">activity@udl.cat</string>
    <string name="textMiss">Hola com va?</string>

    <string name="lat">41.60788</string>
    <string name="lon">0.623333</string>
    <string name="url">http://www.eps.udl.cat/ca/</string>
    <string name="direccion">Carrer de Jaume II, 69, Lleida</string>
    <string name="textoABuscar">escuela politecnica superior UdL</string>

    <!--Opciones(Toast)-->
    <string name="opcion1">Seleccionado Localizacion por coordenadas</string>
    <string name="opcion2">Seleccionado Localizacion por dirección</string>
    <string name="opcion3">Accediendo a la web</string>
    <string name="opcion4">Buscando en Google</string>
    <string name="opcion5">Llamando el Tlfn.</string>
    <string name="opcion6">Marcando el Tlfn.</string>
    <string name="opcion7">Accediendo a contactos</string>
    <string name="opcion8">Enviando SMS</string>
    <string name="opcion9">Enviando email</string>
    <string name="opcion10">Accediendo a la galeria</string>
    <string name="opcion11">Accediendo a la camara</string>
    <string name="demo">demo</string>
    <string name="Boton12">PICK from ThirdActivity</string>
    <string name="third">Accediendo a ThirdActivity</string>
    <string name="mess">mess</string>

    <!--Botones-->
    <string name="Boton1">Por coord.</string>
    <string name="Boton2">Por direcc.</string>
    <string name="Boton3">Por URL</string>
    <string name="Boton4">Google</string>
    <string name="Boton5">Llamar</string>
    <string name="Boton6">Marcar</string>
    <string name="Boton7">Acceder Contactos</string>
    <string name="Boton8">Enviar SMS</string>
    <string name="Boton9">Enviar email</string>
    <string name="Boton10">Acceder Galería imágenes</string>
    <string name="Boton11">Acceder Camara</string>


</resources>